Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,7 @@ stages:
 
   - stage: Linting
     jobs:
-      - job: Linting Java App
+      - job: Linting_Java_App
         steps:
         - task: PowerShell@2
           inputs:
