Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,7 @@ stages:
             goals: 'package'
         - task: PublishBuildArtifacts@1
           inputs:
-            PathtoPublish: '$(System.DefaultWorkingDirectory)/JavaLoginPracticeApp/'
+            PathtoPublish: '$(Build.SourcesDirectory)/target'
             ArtifactName: 'Maven Build Artifact'
             publishLocation: 'Container'
 
