--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,8 +41,8 @@ stages:
             targetType: 'inline'
             script: |
               Write-Host " JAVA_HOME = $env:JAVA_HOME "
-                  Write-Host " Java version from agent context: "
-                  java -version
+              Write-Host " Java version from agent context: "
+              java -version
           displayName: Validate Java Installed
 
         - task: PowerShell@2
@@ -51,33 +51,34 @@ stages:
             script: |
               $workDir = "$env:AGENT_TEMPDIRECTORY/checkstyle"
 
-                # Create directory
-                Write-Host "Creating directory $workDir"
-                New-Item -ItemType Directory -Force -Path $workDir
+              # Create directory
+              Write-Host "Creating directory $workDir"
+              New-Item -ItemType Directory -Force -Path $workDir | Out-Null
 
-                # Download Checkstyle
-                $checkstyleUrl = "https://github.com/checkstyle/checkstyle/releases/download/checkstyle-10.18.1/checkstyle-10.18.1-all.jar"
-                $jarPath = "$workDir/checkstyle.jar"
+              # Download Checkstyle
+              $checkstyleUrl = "https://github.com/checkstyle/checkstyle/releases/download/checkstyle-10.18.1/checkstyle-10.18.1-all.jar"
+              $jarPath = "$workDir/checkstyle.jar"
 
-                Write-Host "Downloading Checkstyle..."
-                Invoke-WebRequest -Uri $checkstyleUrl -OutFile $jarPath
-                Write-Host "Download complete: $jarPath"
+              Write-Host "Downloading Checkstyle..."
+              Invoke-WebRequest -Uri $checkstyleUrl -OutFile $jarPath
+              Write-Host "Download complete: $jarPath"
 
-                # Test the JAR
-                Write-Host "Testing CheckStyle jar..."
-                java -jar $jarPath -version
-                    displayName: Install CheckStyle
+              # Test the JAR
+              Write-Host "Testing CheckStyle jar..."
+              java -jar $jarPath -version
+          displayName: Install CheckStyle
 
         - task: PowerShell@2
+          displayName: Run CheckStyle
           inputs:
             targetType: 'inline'
             script: |
-              $jarPath = "$(Agent.TempDirectory)\checkstyle\checkstyle.jar"
-                    $config = "$(System.DefaultWorkingDirectory)\google_checks.xml"
-                    $srcFolder = "$(System.DefaultWorkingDirectory)\src"
-              
-                    Write-Host "Running Checkstyle..."
-                    java -jar $jarPath -c $config $srcFolder
-              
-                    Write-Host "Checkstyle completed."
-          displayName: Run CheckStyle
+              $jarPath = "$(Agent.TempDirectory)/checkstyle/checkstyle.jar"
+              $config = "$(System.DefaultWorkingDirectory)/google_checks.xml"
+              $srcFolder = "$(System.DefaultWorkingDirectory)/src"
+        
+              Write-Host "Running Checkstyle..."
+              java -jar $jarPath -c $config $srcFolder
+        
+              Write-Host "Checkstyle completed."
+          
