--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -93,7 +93,7 @@ stages:
         steps:
         - task: ArchiveFiles@2
           inputs:
-            rootFolderOrFile: '$(Build.ArtifactStagingDirectory)'
+            rootFolderOrFile: '$(Pipeline.Workspace)/Maven Build Artifact'
             includeRootFolder: false
             archiveType: 'zip'
             archiveFile: '$(Build.ArtifactStagingDirectory)/app.zip'
@@ -102,8 +102,8 @@ stages:
           displayName: Copy Files Over SSH
           inputs:
             sshEndpoint: 'sshSC'
-            sourceFolder: '$(Build.ArtifactStagingDirectory)'
-            contents: 'app.zip'
+            sourceFolder: '$(Pipeline.Workspace)/Maven Build Artifact'
+            contents: '**/*.war'
             targetFolder: '/var/lib/tomcat10/webapps/'
             readyTimeout: '20000'
         - task: SSH@0
