--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -108,13 +108,43 @@ stages:
             artifactName: 'MavenBuildArtifact'
             itemPattern: 
             downloadPath: '$(Pipeline.Workspace)'
-        - task: ArchiveFiles@2
+        - task: PowerShell@2
+          displayName: Find WAR File
           inputs:
-            rootFolderOrFile: '$(Pipeline.Workspace)/Maven Build Artifact'
-            includeRootFolder: false
-            archiveType: 'zip'
-            archiveFile: '$(Build.ArtifactStagingDirectory)/app.zip'
-            replaceExistingArchive: true
+            targetType: 'inline'
+            script: |
+              Write-Host "=== Searching for WAR files ==="
+              $artifactPath = "$(Pipeline.Workspace)/MavenBuildArtifact"
+              Write-Host "Artifact path: $artifactPath"
+              
+              if (-not (Test-Path $artifactPath)) {
+                Write-Error "Artifact path does not exist: $artifactPath"
+                Write-Host "Available directories in Pipeline.Workspace:"
+                Get-ChildItem -Path "$(Pipeline.Workspace)" -Directory | Format-Table Name
+                exit 1
+              }
+              
+              # List all files
+              Write-Host "All files in artifact:"
+              Get-ChildItem -Path $artifactPath -Recurse | Select-Object -First 20 | Format-Table Name, Extension, Length
+              
+              # Find WAR files
+              $warFiles = Get-ChildItem -Path $artifactPath -Filter "*.war" -Recurse
+              if ($warFiles.Count -eq 0) {
+                Write-Warning "No WAR files found in artifact!"
+                Write-Host "Looking for any JAR files instead..."
+                $jarFiles = Get-ChildItem -Path $artifactPath -Filter "*.jar" -Recurse
+                if ($jarFiles.Count -gt 0) {
+                  Write-Host "Found JAR files instead:"
+                  $jarFiles | ForEach-Object { Write-Host "  - $($_.FullName)" }
+                }
+              } else {
+                Write-Host "Found $($warFiles.Count) WAR file(s):"
+                $warFiles | ForEach-Object { 
+                  Write-Host "  - $($_.FullName)"
+                }
+              }
+              
         - task: CopyFilesOverSSH@0
           displayName: Copy Files Over SSH
           inputs:
