--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,43 +59,50 @@ stages:
                   Write-Error "Java is NOT installed. Please install Java on the agent."
                   exit 1
               }
-        
+
               Write-Host "JAVA_HOME = $env:JAVA_HOME"
               java -version
-        
+
               Write-Host "`n=== INSTALLING CHECKSTYLE ==="
               $workDir = "$env:AGENT_TEMPDIRECTORY/checkstyle"
               New-Item -ItemType Directory -Force -Path $workDir | Out-Null
-        
+
               $checkstyleUrl = "https://github.com/checkstyle/checkstyle/releases/download/checkstyle-10.18.1/checkstyle-10.18.1-all.jar"
               $jarPath = "$workDir/checkstyle.jar"
-        
+
               Write-Host "Downloading Checkstyle JAR..."
               Invoke-WebRequest -Uri $checkstyleUrl -OutFile $jarPath
               Write-Host "Checkstyle JAR downloaded: $jarPath"
-        
+
               Write-Host "`nTesting Checkstyle..."
               java -jar $jarPath --version
-        
+
               Write-Host "`n=== DOWNLOADING CHECKSTYLE CONFIG (google_checks.xml) ==="
               $configUrl = "https://raw.githubusercontent.com/checkstyle/checkstyle/checkstyle-10.18.1/src/main/resources/google_checks.xml"
               $configPath = "$(System.DefaultWorkingDirectory)/google_checks.xml"
-        
+
               Invoke-WebRequest -Uri $configUrl -OutFile $configPath
               Write-Host "Config downloaded at: $configPath"
-        
+
               Write-Host "`n=== RUNNING CHECKSTYLE ==="
-              $srcFolder = "$(System.DefaultWorkingDirectory)/src"
+              $srcFolder = "$(System.DefaultWorkingDirectory)/src/main/java"
+
+              if (!(Test-Path $srcFolder)) {
+                  Write-Host "Source folder $srcFolder not found. Falling back to $(System.DefaultWorkingDirectory)/src"
+                  $srcFolder = "$(System.DefaultWorkingDirectory)/src"
+              }
 
               Write-Host "Source Folder: $srcFolder"
               Write-Host "Running Checkstyle audit..."
-        
-              java -jar /home/vsts/work/_temp/checkstyle/checkstyle.jar `
-              -c /home/vsts/work/1/s/google_checks.xml `
-              -f plain `
-              /home/vsts/work/1/s/src/main/java
-        
+
+              # Use downloaded JAR, config, and correct source folder
+              java -jar $jarPath `
+                  -c $configPath `
+                  -f plain `
+                  $srcFolder
+
               Write-Host "`n=== CHECKSTYLE COMPLETED ==="
+
 
   - stage: Deploy
     displayName: DeploytoTomcat
