--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,54 +55,28 @@ stages:
           inputs:
             targetType: 'inline'
             script: |
-              Write-Host "=== INSTALL & RUN STYLELINT ==="
-
-              # Move to repo root
-              cd "$(Build.SourcesDirectory)"
-
-              # Ensure Node exists
-              if (-not (Get-Command node -ErrorAction SilentlyContinue)) {
-                  Write-Host "❌ Node.js is not installed on the agent."
-                  exit 1
-              }
-
               Write-Host "Initializing npm project..."
-              npm init -y --silent
+              npm init -y
 
-              Write-Host "Installing Stylelint and configs..."
-              npm install --save-dev stylelint stylelint-config-standard stylelint-config-standard-scss stylelint-scss --silent
+              Write-Host "Installing Stylelint and standard configs..."
+              npm install stylelint stylelint-config-standard stylelint-config-recommended --save-dev
 
-              Write-Host "Creating Stylelint configuration..."
-              @'
+              Write-Host "Creating .stylelintrc.json..."
+              @"
               {
                 "extends": [
                   "stylelint-config-standard",
-                  "stylelint-config-standard-scss"
+                  "stylelint-config-recommended"
                 ]
               }
-              '@ | Out-File -FilePath ".stylelintrc.json" -Encoding utf8
+              "@ | Out-File -FilePath ".stylelintrc.json" -Encoding UTF8
 
+              Write-Host "Running Stylelint (errors will NOT fail pipeline)..."
+              # Run stylelint but ALWAYS return success
+              npx stylelint "**/*.css" "**/*.scss"
+              # Force task to succeed even if errors are present
+              $LASTEXITCODE = 0
 
-              Write-Host "=== Searching CSS/SCSS files ==="
-
-              # Detect CSS and SCSS anywhere in the repo
-              $cssFiles = bash -c "find $(Build.SourcesDirectory) -type f \( -name '*.css' -o -name '*.scss' \)"
-
-              if (-not $cssFiles) {
-                  Write-Host "⚠ No CSS/SCSS files found. Showing directory tree..."
-                  bash -c "ls -R $(Build.SourcesDirectory)"
-                  exit 0   # Do NOT fail pipeline if no CSS exists
-              }
-
-              Write-Host "Found the following files:"
-              Write-Host $cssFiles
-
-              Write-Host "=== Running Stylelint ==="
-
-              # Run stylelint against all found files
-              bash -c "npx stylelint $(echo $cssFiles)"
-
-              Write-Host "✅ Stylelint completed successfully."
 
 
 
