--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,9 @@ stages:
           displayName: Prepare SonarQube Analysis
           inputs:
             SonarQube: 'SonarQube-Service-Connection'
-            scannerMode: 'other'
+            scannerMode: 'Maven'
+            projectKey: 'javaloginpracticeapp'
+            projectName: 'Java Login Practice App'
         - task: Maven@4
           displayName: mvn build + SonarQube Analysis
           inputs:
@@ -36,6 +38,7 @@ stages:
             effectivePomSkip: false
             sonarQubeRunAnalysis: true
             sqMavenPluginVersionChoice: 'pom'
+            goals: 'clean verify'
         
         - task: SonarQubePublish@8
           displayName: Publish Quality Gate Result
