Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,8 @@ stages:
           inputs:
             SonarQube: 'SonarCloud-SC'
             scannerMode: 'other'
+            extraProperties: |
+                sonar.organization=BhabyaBharti
 
         - task: Maven@4
           displayName: mvn build + SonarQube Analysis
